Added applications and mysql.

--- a/provisioning/puppet/modules/apache/files/vhosts.conf
+++ b/provisioning/puppet/modules/apache/files/vhosts.conf
@@ -6,22 +6,46 @@
 #
 
 #
-# local.typo3-base.de
+# local.application-a.de
 #
 <VirtualHost *:80>
 
     # The document root. 
-    DocumentRoot /var/www/application/typo3
+    DocumentRoot /var/www/application/a
     
     # The default server name.
-    ServerName typo3-base.de
+    ServerName application-a.de
 
     # Alternative server names.
-    ServerAlias *.typo3-base.de
+    ServerAlias *.application-a.de
     
-    # Configuration for the "/var/www/application/typo3" directory. 
-    <Directory "/var/www/application/typo3">
-        DirectoryIndex index.html index.php
+    # Configuration for the "/var/www/application/a" directory. 
+    <Directory "/var/www/application/a">
+        DirectoryIndex index.php index.html
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+    
+ </VirtualHost>
+ 
+#
+# local.application-b.de
+#
+<VirtualHost *:80>
+
+    # The document root. 
+    DocumentRoot /var/www/application/b
+    
+    # The default server name.
+    ServerName application-b.de
+
+    # Alternative server names.
+    ServerAlias *.application-b.de
+    
+    # Configuration for the "/var/www/application/b" directory. 
+    <Directory "/var/www/application/b">
+        DirectoryIndex index.php index.html
         AllowOverride All
         Order allow,deny
         Allow from all
